--- a/apps/templates/apps/determinant_calc.html
+++ b/apps/templates/apps/determinant_calc.html
@@ -1,7 +1,7 @@
 {% extends 'apps/layout.html' %}
 {% load static %}
 
-{% block title %}Calculator of Determinant of Matrix{% endblock %}
+{% block title %}Calculadora de Determinante de Matriz{% endblock %}
 {% block scripts %} <script src="{% static 'apps/product_det.js' %}"></script> 
 <script src="{% static 'apps/basic02.js' %}"></script>
 {% endblock %}
