--- a/apps/templates/apps/pa.html
+++ b/apps/templates/apps/pa.html
@@ -26,7 +26,7 @@
             <label for="r">r</label>
             <input type="number" name="var2" id="r" value="{{ r }}" step="any" required>
             {% csrf_token %}
-            <button type="submit" value="new_progression" class="btn btn-primary" id="submit_btn" data-mode="pa">Generate</button >
+            <button type="submit" value="new_progression" class="btn btn-primary" id="submit_btn" data-mode="pa">Gerar</button >
         </form>
         <div class="result_area"></div>
         <div class="operation_input">
