--- a/home/templates/home/about_me.html
+++ b/home/templates/home/about_me.html
@@ -5,7 +5,7 @@
 <div class="content">
     <div class="text_content_about">
         <h1>Sobre Mim</h1>
-          <p>Olá eu sou um  estudante do ensino médio apaixonado por tecnologia e ciências e programar se tornou um hobby e uma possível possibiilidade de emprego para mim</p>
+          <p>Olá eu sou um  estudante do ensino médio apaixonado por tecnologia e ciências e programar se tornou um hobby e uma possível possibilidade de emprego para mim</p>
           <p>Eu criei esse site com o intuito de divulgar conhecimento, sendo uma tentativa minha de alterar o precário cenário educacional que existe no nosso país.</p>
     </div>
   
