--- a/home/templates/home/course_page.html
+++ b/home/templates/home/course_page.html
@@ -4,5 +4,6 @@
 <h1 class="h">{{course.name}}</h1>
 <div class="text_content">
     <p>{{ course.content|safe }}</p>
+    <p><a href="{% url 'courses' %}">Clique aqui</a> para voltar para o página dos cursos.</p>
 </div>
 {% endblock %}
