--- a/home/templates/home/layout.html
+++ b/home/templates/home/layout.html
@@ -12,7 +12,7 @@
     <script src="{% static 'home/basic.js' %}"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
+<body id="body">
     <header>
         <nav id="nav">
             <a class="logo" href="{% url 'home' %}">Estudologia</a>
